--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -3,8 +3,15 @@
 ////////////
 $grey: #333333;
 
-///////////////////////
-// Navigation colors //
-///////////////////////
+//////////////////////////
+// Navigation variables //
+//////////////////////////
 $nav-background:  $grey;
 $nav-text-color: white;
+
+/////////////////////
+// Clock variables //
+/////////////////////
+$clock-text-color: white;
+$clock-bg-color: #B5D0E2;
+$clock-border-color: #2099E8;
