Styling changes throughout

--- a/app/styles/base/_foundation-settings.scss
+++ b/app/styles/base/_foundation-settings.scss
@@ -60,9 +60,9 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
-$body-background: url('/images/background-image.jpg');
+$body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Catamaran', Helvetica, Roboto, Arial, sans-serif;
+$body-font-family: 'Dosis', Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
