--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,7 +6,9 @@
 @include foundation-everything;
 
 // Components:
+@import "components/body";
 @import "components/navigation";
 @import "components/clock";
 @import "components/controls";
 @import "components/page-title";
+@import "components/countdown-form";
